--- a/STT_01NguyenKhanhAn_Tuan03/lab3/package.json
+++ b/STT_01NguyenKhanhAn_Tuan03/lab3/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/routers": "^6.1.9",
+    "@react-navigation/stack": "^6.3.18",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.13",
     "expo-linear-gradient": "^12.5.0",
